--- a/Creative Design For The Web/Assignments/roomDesign/roomdesign.css
+++ b/Creative Design For The Web/Assignments/roomDesign/roomdesign.css
@@ -1,23 +1,171 @@
-.flex-nav {
-    display: flex;
-    justify-content: space-around;
-    background: white;
-    padding: 1rem;
-    align-items: center;
+
+.room1{
+    border: 5px solid black;
+    width: 500px;
+    height: 400px;
+    padding: 50px;
+    margin: auto;
+    text-align: center;
+    
 }
 
-.nav-item {
-    color: white;
-    text-decoration: none;
-    padding: 0.5rem 1rem;
-    /* Add hover effects */
-    transition: all 0.3s ease;
+    #sofa {
+        width: 200px;
+        height: 50px;
+        background-color: beige;
+        border: 2px solid;
+        position: relative;
+        bottom: 50px;
+
+    }
+
+    #table {
+        width: 125px;
+        height: 300px;
+        background-color: burlywood;
+        border: 2px solid chocolate;
+        position: relative;
+        left: 400px;
+    }   
+
+    #frame {
+        width: 100px;
+        height: 20px;
+        background-color: grey;
+        border: black;
+        position: relative;
+        left: 450px;
+        bottom: 410px;
+    }
+
+    #rug {
+        width: 300px;
+        height: 300px;
+        background-color: bisque;
+        border: solid white;
+        position: relative;
+        bottom: 250px;
+    }
+
+    #door {
+        width: 100px;
+        height: 20px;
+        background-color: chocolate;
+        border: solid brown;
+        position: relative;
+        bottom: 260px;
+        left: 400px;
+    }
+
+    .room2 {
+        border: 5px solid black;
+        width: 800px;
+        height: 400px;
+        padding: 50px;
+        margin: auto;
+        text-align: center;
+      }
+      
+      #TV {
+        width: 300px;
+        height: 200px;
+        background-color: black;
+        position: relative;
+        left: 250px;
+      }
+      
+      #bookshelf1 {
+        width: 200px;
+        height: 300px;
+        position: relative;
+        right: 0px;
+        bottom: 80px;
+      }
+      
+      #bookshelf2 {
+        width: 200px;
+        height: 300px;
+        position: relative;
+        left: 500px;
+        bottom: 380px;
+      }
+      
+      #tvstand {
+        width: 300px;
+        height: 50px;
+        position: relative;
+        left: 105px;
+        bottom: 780px;
+
+
+      }
+      
+      #pictureFrame {
+        position: relative;
+        bottom: 890px;
+        right: 250px;
+      }
+
+.room3 {
+  border: 5px solid black;
+  width: 1000px;
+  height: 400px;
+  padding: 50px;
+  margin: auto;
+  text-align: center;
+  background-color: #11151C; /* Dark blue background */
+  color: white; /* White text */
+  background-image: url('background.jpg'); /* Replace with your image path */
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-.nav-item:hover {
-    /* Create a glowing effect */
-    background-color: rgba(255, 255, 255, 0.1);
-    transform: translateY(-2px);
-    box-shadow: 0 2px 8px rgba(255, 255, 255, 0.2);
-    border-radius: 4px;
+.room3 h2 {
+  font-size: 50px;
+  margin-bottom: 20px;
+  font-family: "Pixelify Sans", sans-serif;
+}
+
+.room3 h3 {
+    font-size: 30px;
+    margin-bottom: 20px;
+    font-family: "Pixelify Sans", sans-serif;
+}
+.game-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.game1, .game2, .game3 {
+  width: 200px;
+  height: 200px;
+  border: 2px solid white; /* White border */
+  padding: 20px;
+  text-shadow: 0 0 5px #00ff00;
+}
+
+.game1:hover, .game2:hover, .game3:hover {
+    background-color: rgba(0, 255, 0, 0.2); /* Add a subtle green background on hover */
+    transform: scale(1.05); /* Slightly enlarge the box on hover */
+    cursor: pointer; /* Change the cursor to a pointer on hover */
+
+}
+
+.game1 p, .game2 p, .game3 p {
+    font-size: 20px;
+  text-align: center;
+  font-family: 'Pixelify Sans', sans-serif;
+  margin-bottom: 10px; /* Add some space between the text and the image */
+}
+
+.game1 img, .game2 img, .game3 img {
+  width: 75%; /* Make the images fill the container */
+}
+
+
+.pixelify-sans-font> {
+    font-family: "Pixelify Sans", serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
   }
