--- a/Creative Design For The Web/Notes/CSS Notes/cssnotes1/box.css
+++ b/Creative Design For The Web/Notes/CSS Notes/cssnotes1/box.css
@@ -12,48 +12,50 @@ body {
     
 }
 
-#sofa {
-    width: 200px;
-    height: 50px;
-    background-color: beige;
-    border: 2px solid;
-    position: absolute;
-    bottom: 50px;
+    #sofa {
+        width: 200px;
+        height: 50px;
+        background-color: beige;
+        border: 2px solid;
+        position: relative;
+        bottom: 50px;
 
-}
+    }
 
-#table {
-    width: 125px;
-    height: 300px;
-    background-color: burlywood;
-    border: 2px solid chocolate;
-    position: absolute;
-    right: 350px;
-}
+    #table {
+        width: 125px;
+        height: 300px;
+        background-color: burlywood;
+        border: 2px solid chocolate;
+        position: relative;
+        left: 400px;
+    }   
 
-#frame {
-    width: 100px;
-    height: 20px;
-    background-color: grey;
-    border: black;
-    position: absolute;
-    left: 450px;
-    top: 13px;
-}
+    #frame {
+        width: 100px;
+        height: 20px;
+        background-color: grey;
+        border: black;
+        position: relative;
+        left: 450px;
+        bottom: 410px;
+    }
 
-#rug {
-    width: 300px;
-    height: 300px;
-    background-color: bisque;
-    border: solid white;
-}
+    #rug {
+        width: 300px;
+        height: 300px;
+        background-color: bisque;
+        border: solid white;
+        position: relative;
+        bottom: 250px;
+    }
 
-#door {
-    width: 100px;
-    height: 20px;
-    background-color: chocolate;
-    border: solid brown;
-    position: absolute;
-    bottom: 10px;
-    right: 295px;
-}
+    #door {
+        width: 100px;
+        height: 20px;
+        background-color: chocolate;
+        border: solid brown;
+        position: relative;
+        bottom: 260px;
+        left: 400px;
+    }
