--- a/Creative Design For The Web/Final/homepage/homeStyle.css
+++ b/Creative Design For The Web/Final/homepage/homeStyle.css
@@ -39,6 +39,15 @@
   .container {
     height: 25vh;
   }
+  .breakhr {
+      position: relative;
+      top: 15vh;
+      margin: 5vh;
+  }
+  .container1 {
+    position: relative;
+    top: 10vh;
+  }
 }
 
   .container .logo,
@@ -61,13 +70,45 @@
 
 .container1 .quote, 
 .container1 .missionStatement, 
-.container1 .teamAbout {
+.container1 .teamAbout,
+.container1 .teamWhere,
+.container1 .whatWeDo,
+.container1 .video {
   position: relative;
   top: 125%;
   display: block;
-  padding: 5em;
+  padding: 1.5em;
   font-family: "Pixelify Sans", serif;
   color: #F7FFF7;
   font-size: 25px;
 }
 
+.container1 .image img{
+  display: flex;
+  justify-content: center;
+  width: 94vw;
+}
+
+
+.container1 .sponsors {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  position: relative;
+  right: 2vw;
+}
+
+.container1 .sponsors h2 {
+  font-family: "Pixelify Sans", serif;
+  color: #F7FFF7;
+  font-size: 40px;
+}
+
+.container1 .sponsors img {
+  width: calc(100vw / 4 - 40px);
+  height: auto;
+  object-fit: contain;
+  flex: 1 1 calc(25% - 20px);
+  padding: 10px;
+}
